# boteco_django

./: README.md  db.sqlite3  manage.py  pyproject.toml
boteco_django/: asgi.py  settings.py  urls.py  wsgi.py
customer/: admin.py  controller.py  models.py
product/: admin.py  controller.py  models.py
sport/: admin.py  controller.py  models.py
team/: admin.py  controller.py  models.py
